k8s-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hello-world
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: go.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-hello-world-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: go-hello-world-service
  labels:
    app: go-hello-world
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: go-hello-world
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment                 
metadata:
  name: go-hello-world           
spec:
  replicas: 3                    
  selector:
    matchLabels:
      app: go-hello-world
  strategy:
    type: Recreate     
  template:                      
    metadata:
      labels:                    
        app: go-hello-world 
    spec:                        
      containers:
      - name: go-hello-world
        image: camiloavelar/go-hello-world:0.0.3
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            name: go-hello-world
        livenessProbe:           
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:          
          httpGet:
            path: /readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
