k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hello-world
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: go.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-hello-world
            port:
              number: 80
